# mps-sdpa

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPAT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: nightly.yml  pypi.yml  release.yml  tests.yml
docs/: ROADMAP.md
docs/design/: README.md  benchmarks.md  custom-kernel-experiment.md  dispatch-rationale.md  v0.2.0-implementation-plan.md  v0.2.0-research.md
scripts/: README.md  bootstrap_envs.sh  verify_machine.sh
src/mps_sdpa/: __init__.py  __main__.py  api.py  cli.py
src/mps_sdpa/_cpp/: __init__.py  mpsgraph_zc.mm
src/mps_sdpa/backends/: __init__.py  _calibrate.py  metal_op.py  metal_proto.py  mpsgraph.py  mpsgraph_zc.py  stock.py  torch_compile_op.py
src/mps_sdpa/harness/: __init__.py  benchmark.py  cold_latency.py  contamination.py  correctness.py  gradcheck.py  memory.py  reference.py  report.py  tensor_factory.py  tolerances.py
src/mps_sdpa/suites/: __init__.py  correctness_shapes.py  general_shapes.py  realistic_shapes.py
src/mps_sdpa/training_check/: __init__.py  checkpoint_interchange.py  loss_compare.py  synthetic_train.py
src/mps_sdpa/utils/: __init__.py  env.py  thermal.py
tests/: __init__.py  _tolerances.py  conftest.py  test_amp_autocast.py  test_api.py  test_backward_scale.py  test_benchmark.py  test_calibration.py  test_checkpoint_compat.py  test_checkpoint_interchange.py  test_chip_tolerances.py  test_cli.py  test_cold_latency.py  test_contamination.py  test_correctness_checker.py  test_dispatch.py  test_dropout_zc.py  test_edge_cases.py  test_env.py  test_extended_shapes.py  test_fallback_logging.py  test_fallback_stats.py  test_generic_transformer.py  test_gradcheck_harness.py  test_long_horizon.py  test_loss_compare.py  test_mask_dtype_coercion.py  test_memory_harness.py  test_metal_proto.py  test_mpsgraph_zc.py  test_numerical_extremes.py  test_oom_recovery.py  test_partial_requires_grad.py  test_per_head_masks.py  test_reference.py  test_report.py  test_retain_graph.py  test_second_order_grads.py  test_suites.py  test_synthetic_train.py  (+6 more)
