[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mps-sdpa"
version = "0.1.1"
description = "Fast drop-in scaled_dot_product_attention for Apple silicon (MPS) — wraps Apple's native MPSGraph SDPA with a zero-copy C++ bridge. 5-7x inference, 2-2.5x training."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Christopher Landschoot" }]
keywords = ["pytorch", "mps", "apple-silicon", "attention", "sdpa", "metal", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.11.0",
    "numpy>=1.24",
    "psutil>=5.9",
    # ninja is required for torch.utils.cpp_extension.load() to JIT-compile the
    # zero-copy Obj-C++ backend on first use. Without it, mpsgraph_zc falls back
    # to the slower pyobjc backend.
    "ninja>=1.11; sys_platform == 'darwin'",
    "pyobjc-core>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Metal>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-MetalPerformanceShadersGraph>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "scipy>=1.11", "matplotlib>=3.7", "build", "twine"]

[project.scripts]
"mps-sdpa" = "mps_sdpa.cli:main"

[project.urls]
Homepage = "https://github.com/crlandsc/mps-sdpa"
Documentation = "https://github.com/crlandsc/mps-sdpa#readme"
Issues = "https://github.com/crlandsc/mps-sdpa/issues"
Changelog = "https://github.com/crlandsc/mps-sdpa/blob/main/CHANGELOG.md"
Source = "https://github.com/crlandsc/mps-sdpa"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# The C++/Obj-C++ extension source must be shipped in the wheel — it's
# compiled at import time via torch.utils.cpp_extension.load().
"mps_sdpa._cpp" = ["*.mm", "*.h"]
